--- a/addwhatsappgrouplink.html
+++ b/addwhatsappgrouplink.html
@@ -1,256 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Join trusted and verified betting WhatsApp groups for Cricket, Football, Casino, Teen Patti, Poker & Fantasy League. Daily tips, predictions & strategies to maximize your earnings safely.">
-  <meta name="keywords" content="betting group links, cricket betting tips, football betting, casino tips, teen patti strategies, poker group, fantasy league tips, whatsapp group links">
-  <meta name="robots" content="index, follow">
-  <title>BetLinkHub - Trusted Betting WhatsApp Groups</title>
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. JokerLudo is your #1 Ludo King group link hub." />
-  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
-  <meta name="author" content="JokerLudo Group" />
-  <meta name="robots" content="index, follow" />
-  
-  <!-- ✅ Google AdSense Code -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
-     crossorigin="anonymous"></script>
-
-  <!-- Favicon -->
-  <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
-  
-  <!-- Google Site Verification -->
-  <meta name="google-site-verification" content="google-site-verification-code-here" />
-
-  <!-- Google Analytics (G-EZF7SRX6EJ) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-EZF7SRX6EJ');
-  </script>
-
-  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
-  <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups" />
-  <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with JokerLudo!" />
-  <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
-  <meta property="og:url" content="https://ludogrouplink.com/" />
-  <meta property="og:type" content="website" />
-
-  <!-- Twitter Cards -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="JokerLudo - Earn Real Money in Ludo" />
-  <meta name="twitter:description" content="Join JokerLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
-  <meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
-
-  <!-- Schema.org JSON-LD -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "JokerLudo Group",
-    "url": "https://ludogrouplink.com",
-    "logo": "https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg",
-    "sameAs": [
-      "https://www.facebook.com/JokerLudo",
-      "https://www.instagram.com/JokerLudo"
-    ]
-  }
-  </script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f9f9f9;
-      color: #222;
-      transition: background 0.3s, color 0.3s;
-    }
-    .dark-mode {
-      background: #1a1a1a;
-      color: #f1f1f1;
-    }
-    header {
-      text-align: center;
-      padding: 20px;
-      background: #0077cc;
-      color: #fff;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 28px;
-    }
-    .toggle-btn {
-      margin-top: 10px;
-      padding: 8px 16px;
-      background: #fff;
-      color: #0077cc;
-      border: none;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-    section {
-      max-width: 1100px;
-      margin: auto;
-      padding: 20px;
-    }
-    .groups {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 20px;
-    }
-    .group-card {
-      background: #fff;
-      padding: 16px;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      transition: transform 0.2s;
-    }
-    .dark-mode .group-card {
-      background: #2b2b2b;
-    }
-    .group-card:hover {
-      transform: translateY(-3px);
-    }
-    .group-card img {
-      width: 40px;
-      height: 40px;
-      vertical-align: middle;
-      margin-right: 8px;
-    }
-    .group-card h4 {
-      margin: 0;
-      font-size: 18px;
-      display: flex;
-      align-items: center;
-    }
-    .group-card p {
-      margin: 10px 0;
-      font-size: 14px;
-    }
-    .btn-primary {
-      display: inline-block;
-      padding: 8px 14px;
-      background: #0077cc;
-      color: #fff;
-      border-radius: 5px;
-      text-decoration: none;
-    }
-    .dark-mode .btn-primary {
-      background: #3399ff;
-    }
-    .view-toggle {
-      display: block;
-      text-align: center;
-      margin-top: 20px;
-      font-weight: bold;
-      cursor: pointer;
-      color: #0077cc;
-    }
-    .faq {
-      margin-top: 40px;
-    }
-    .faq h3 {
-      margin-bottom: 10px;
-    }
-    .faq p {
-      margin-bottom: 20px;
-      font-size: 14px;
-    }
-  </style>
-  <!-- FAQ Schema for SEO -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "FAQPage",
-    "mainEntity": [{
-      "@type": "Question",
-      "name": "What is BetLinkHub?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "BetLinkHub is a platform that provides trusted and verified WhatsApp group links for Cricket, Football, Casino, Teen Patti, Poker, and Fantasy League betting."
-      }
-    },{
-      "@type": "Question",
-      "name": "Are the betting groups safe to join?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Yes, all listed groups are verified and regularly monitored to ensure safe and trustworthy betting tips."
-      }
-    }]
-  }
-  </script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Join trusted and verified betting WhatsApp groups for Cricket, Football, Casino, Teen Patti, Poker & Fantasy League. Get expert tips and maximize your earnings safely.">
+<title>BetLinkHub - Trusted Betting WhatsApp Groups</title>
+<style>
+  body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f8f8f8; color:#333; }
+  header { padding:20px; background:#222; color:#fff; display:flex; justify-content:space-between; align-items:center; }
+  header h1 { margin:0; font-size:22px; }
+  button.toggle-dark { background:#fff; color:#000; border:none; padding:8px 14px; cursor:pointer; border-radius:6px; }
+  section { max-width:1100px; margin:auto; padding:20px; }
+  h2 { text-align:center; margin-bottom:15px; }
+  p { max-width:800px; margin:0 auto 20px; text-align:center; }
+  .group-list { display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:20px; }
+  .group { background:#fff; border-radius:12px; padding:15px; box-shadow:0 2px 6px rgba(0,0,0,0.1); display:flex; gap:12px; align-items:center; }
+  .group img { width:50px; height:50px; border-radius:8px; object-fit:cover; }
+  .group h3 { margin:0; font-size:18px; }
+  .group p { margin:5px 0; font-size:14px; }
+  .btn { display:inline-block; background:#28a745; color:#fff; padding:6px 12px; border-radius:6px; text-decoration:none; font-size:14px; }
+  .view-toggle { display:block; text-align:center; margin-top:20px; cursor:pointer; color:#007bff; }
+  footer { text-align:center; padding:15px; background:#222; color:#fff; margin-top:30px; }
+  /* Dark mode */
+  body.dark { background:#121212; color:#ddd; }
+  body.dark .group { background:#1e1e1e; }
+  body.dark header { background:#000; }
+  body.dark footer { background:#000; }
+</style>
 </head>
 <body>
-  <header>
-    <h1>BetLinkHub</h1>
-    <button class="toggle-btn" onclick="toggleDarkMode()">Toggle Dark Mode</button>
-  </header>
+<header>
+  <h1>BetLinkHub</h1>
+  <button class="toggle-dark" onclick="toggleDark()">Toggle Dark Mode</button>
+</header>
 
-  <section>
-    <h2 style="text-align:center;">Join Trusted Betting Groups</h2>
-    <p style="text-align:center; max-width:800px; margin:auto;">
-      Discover the most trusted and verified betting WhatsApp groups for <strong>Cricket, Football, Casino, Teen Patti, Poker,</strong> and <strong>Fantasy League</strong>. 
-      Get daily expert tips, predictions, and strategies to increase your winnings safely.
-    </p>
+<section>
+  <h2>Join Trusted Betting Groups</h2>
+  <p>Find and join the most trusted and verified betting WhatsApp group links for Cricket, Football, Casino, Teen Patti, Poker & Fantasy League. Get expert tips, safe betting strategies, and maximize your earnings.</p>
 
-    <div class="groups" id="group-list">
-      <div class="group-card">
-        <h4><img src="https://cdn-icons-png.flaticon.com/512/861/861512.png"> [254 Members] Cricket Betting Group</h4>
-        <p>Verified cricket betting tips and match predictions for safe and profitable betting.</p>
-        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
-      </div>
-      <div class="group-card">
-        <h4><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png"> [189 Members] Football Betting Group</h4>
-        <p>Daily football match insights, odds analysis, and safe betting tips from experts.</p>
-        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
-      </div>
-      <div class="group-card">
-        <h4><img src="https://cdn-icons-png.flaticon.com/512/861/861464.png"> [312 Members] Casino Betting Group</h4>
-        <p>Learn safe casino strategies, game analysis, and winning tricks from professionals.</p>
-        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
-      </div>
-      <div class="group-card hidden">
-        <h4><img src="https://cdn-icons-png.flaticon.com/512/616/616489.png"> [276 Members] Teen Patti Pro Group</h4>
-        <p>Exclusive Teen Patti strategies, high-stakes tips, and pro tricks to win big.</p>
-        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
-      </div>
-      <div class="group-card hidden">
-        <h4><img src="https://cdn-icons-png.flaticon.com/512/616/616408.png"> [198 Members] Poker Mastermind</h4>
-        <p>Learn winning poker strategies, bluffing techniques, and cash game secrets.</p>
-        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
-      </div>
-      <div class="group-card hidden">
-        <h4><img src="https://cdn-icons-png.flaticon.com/512/5969/5969012.png"> [223 Members] Fantasy League Experts</h4>
-        <p>Get expert picks, tips, and team strategies for fantasy sports leagues.</p>
-        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
+  <div id="groupContainer" class="group-list">
+    <div class="group">
+      <img src="https://via.placeholder.com/50?text=🏏" alt="Cricket Group">
+      <div>
+        <h3>[254 Members] Cricket Betting Group</h3>
+        <p>Verified cricket betting tips and match predictions.</p>
+        <a class="btn" href="https://wa.me/919670814522" target="_blank">Join Now</a>
       </div>
     </div>
-
-    <span class="view-toggle" onclick="toggleGroups()">View All</span>
-
-    <div class="faq">
-      <h3>Frequently Asked Questions</h3>
-      <p><strong>Q:</strong> How do I join a betting group?<br><strong>A:</strong> Simply click the "Join Now" button next to your desired group.</p>
-      <p><strong>Q:</strong> Are these groups free to join?<br><strong>A:</strong> Yes, all listed groups are free unless specified otherwise.</p>
+    <div class="group">
+      <img src="https://via.placeholder.com/50?text=⚽" alt="Football Group">
+      <div>
+        <h3>[189 Members] Football Betting Group</h3>
+        <p>Daily football match insights and safe betting tips.</p>
+        <a class="btn" href="https://wa.me/919670814522" target="_blank">Join Now</a>
+      </div>
     </div>
-  </section>
+    <div class="group">
+      <img src="https://via.placeholder.com/50?text=🎰" alt="Casino Group">
+      <div>
+        <h3>[312 Members] Casino Betting Group</h3>
+        <p>Learn safe casino strategies with expert tips.</p>
+        <a class="btn" href="https://wa.me/919670814522" target="_blank">Join Now</a>
+      </div>
+    </div>
+    <div class="group more">
+      <img src="https://via.placeholder.com/50?text=🃏" alt="Teen Patti Group">
+      <div>
+        <h3>[276 Members] Teen Patti Pro Group</h3>
+        <p>Exclusive Teen Patti strategies & high-stakes tips.</p>
+        <a class="btn" href="https://wa.me/919670814522" target="_blank">Join Now</a>
+      </div>
+    </div>
+    <div class="group more">
+      <img src="https://via.placeholder.com/50?text=♠" alt="Poker Group">
+      <div>
+        <h3>[198 Members] Poker Mastermind</h3>
+        <p>Learn winning poker strategies from top players.</p>
+        <a class="btn" href="https://wa.me/919670814522" target="_blank">Join Now</a>
+      </div>
+    </div>
+    <div class="group more">
+      <img src="https://via.placeholder.com/50?text=🏆" alt="Fantasy League Group">
+      <div>
+        <h3>[223 Members] Fantasy League Experts</h3>
+        <p>Get expert picks & tips for fantasy sports leagues.</p>
+        <a class="btn" href="https://wa.me/919670814522" target="_blank">Join Now</a>
+      </div>
+    </div>
+  </div>
 
-  <footer style="text-align:center; padding:20px; background:#0077cc; color:#fff;">
-    © 2025 BetLinkHub. All rights reserved.
-  </footer>
+  <span class="view-toggle" onclick="toggleGroups()">View All</span>
+</section>
 
-  <script>
-    function toggleDarkMode(){
-      document.body.classList.toggle('dark-mode');
-    }
-    function toggleGroups(){
-      const hiddenGroups = document.querySelectorAll('.group-card.hidden');
-      const toggleBtn = document.querySelector('.view-toggle');
-      hiddenGroups.forEach(g => g.classList.toggle('hidden'));
-      toggleBtn.textContent = toggleBtn.textContent === 'View All' ? 'Show Less' : 'View All';
-    }
-  </script>
+<section>
+  <h2>Frequently Asked Questions</h2>
+  <div>
+    <h4>Are these betting groups safe?</h4>
+    <p>Yes, all our groups are verified and monitored for safe betting practices.</p>
+    <h4>Do I have to pay to join?</h4>
+    <p>No, joining is free but some tips may require premium access.</p>
+    <h4>How can I trust the tips?</h4>
+    <p>We only allow trusted and experienced tipsters in our groups.</p>
+  </div>
+</section>
+
+<footer>
+  <p>© 2025 BetLinkHub. All rights reserved.</p>
+</footer>
+
+<script>
+  function toggleDark(){ document.body.classList.toggle('dark'); }
+  function toggleGroups(){
+    const moreGroups=document.querySelectorAll('.group.more');
+    moreGroups.forEach(g=>g.style.display=(g.style.display==='none' || g.style.display==='')?'flex':'none');
+    document.querySelector('.view-toggle').textContent=document.querySelector('.view-toggle').textContent==='View All'?'Show Less':'View All';
+  }
+  // Hide extra groups initially
+  document.addEventListener('DOMContentLoaded', ()=>{ document.querySelectorAll('.group.more').forEach(g=>g.style.display='none'); });
+</script>
+
+<!-- FAQ Schema for SEO -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [{
+"@type": "Question",
+"name": "Are these betting groups safe?",
+"acceptedAnswer": { "@type": "Answer", "text": "Yes, all our groups are verified and monitored for safe betting practices." }
+},{
+"@type": "Question",
+"name": "Do I have to pay to join?",
+"acceptedAnswer": { "@type": "Answer", "text": "No, joining is free but some tips may require premium access." }
+},{
+"@type": "Question",
+"name": "How can I trust the tips?",
+"acceptedAnswer": { "@type": "Answer", "text": "We only allow trusted and experienced tipsters in our groups." }
+}]
+}
+</script>
 </body>
 </html>
