--- a/addwhatsappgrouplink.html
+++ b/addwhatsappgrouplink.html
@@ -1,143 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Join trusted and verified betting WhatsApp groups for Cricket, Football, Casino, Teen Patti, Poker & Fantasy League. Get expert tips and maximize your earnings safely.">
-<title>BetLinkHub - Trusted Betting WhatsApp Groups</title>
-<style>
-  body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f8f8f8; color:#333; }
-  header { padding:20px; background:#222; color:#fff; display:flex; justify-content:space-between; align-items:center; }
-  header h1 { margin:0; font-size:22px; }
-  button.toggle-dark { background:#fff; color:#000; border:none; padding:8px 14px; cursor:pointer; border-radius:6px; }
-  section { max-width:1100px; margin:auto; padding:20px; }
-  h2 { text-align:center; margin-bottom:15px; }
-  p { max-width:800px; margin:0 auto 20px; text-align:center; }
-  .group-list { display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:20px; }
-  .group { background:#fff; border-radius:12px; padding:15px; box-shadow:0 2px 6px rgba(0,0,0,0.1); display:flex; gap:12px; align-items:center; }
-  .group img { width:50px; height:50px; border-radius:8px; object-fit:cover; }
-  .group h3 { margin:0; font-size:18px; }
-  .group p { margin:5px 0; font-size:14px; }
-  .btn { display:inline-block; background:#28a745; color:#fff; padding:6px 12px; border-radius:6px; text-decoration:none; font-size:14px; }
-  .view-toggle { display:block; text-align:center; margin-top:20px; cursor:pointer; color:#007bff; }
-  footer { text-align:center; padding:15px; background:#222; color:#fff; margin-top:30px; }
-  /* Dark mode */
-  body.dark { background:#121212; color:#ddd; }
-  body.dark .group { background:#1e1e1e; }
-  body.dark header { background:#000; }
-  body.dark footer { background:#000; }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BetLinkHub - Join Trusted Betting Groups on WhatsApp</title>
+  <meta name="description" content="Join trusted and verified WhatsApp betting groups for Cricket, Football, Casino, Teen Patti, Poker & Fantasy League. Get expert tips and safe earning opportunities.">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+    header {
+      background: #222;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+    }
+    header p {
+      font-size: 14px;
+      color: #ddd;
+    }
+    .container {
+      max-width: 1100px;
+      margin: auto;
+      padding: 20px;
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    .group-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .group-card {
+      background: white;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      text-align: center;
+      transition: transform 0.2s ease;
+    }
+    .group-card:hover {
+      transform: translateY(-5px);
+    }
+    .group-card img {
+      width: 60px;
+      height: 60px;
+      margin-bottom: 10px;
+    }
+    .group-card h3 {
+      font-size: 18px;
+      margin: 5px 0;
+    }
+    .group-card p {
+      font-size: 14px;
+      color: #555;
+    }
+    .btn {
+      display: inline-block;
+      padding: 8px 16px;
+      margin-top: 10px;
+      background: #28a745;
+      color: white;
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: 14px;
+    }
+    .btn:hover {
+      background: #218838;
+    }
+    .view-btn {
+      display: block;
+      margin: 30px auto 0;
+      padding: 10px 20px;
+      font-size: 14px;
+      background: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    footer {
+      background: #222;
+      color: #bbb;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
+    }
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
 <body>
+
 <header>
   <h1>BetLinkHub</h1>
-  <button class="toggle-dark" onclick="toggleDark()">Toggle Dark Mode</button>
+  <p>Join Trusted Betting Groups on WhatsApp & Maximize Your Earnings Safely</p>
 </header>
 
-<section>
-  <h2>Join Trusted Betting Groups</h2>
-  <p>Find and join the most trusted and verified betting WhatsApp group links for Cricket, Football, Casino, Teen Patti, Poker & Fantasy League. Get expert tips, safe betting strategies, and maximize your earnings.</p>
+<div class="container">
+  <section>
+    <h2>Available Groups</h2>
+    <p style="text-align:center;">Find and join the most trusted and verified betting group links for Cricket, Football, Casino, Teen Patti, Poker, and Fantasy League. Get expert tips and strategies for safe earnings.</p>
 
-  <div id="groupContainer" class="group-list">
-    <div class="group">
-      <img src="https://via.placeholder.com/50?text=🏏" alt="Cricket Group">
-      <div>
+    <div class="group-grid">
+      <div class="group-card">
+        <img src="https://cdn-icons-png.flaticon.com/512/854/854878.png" alt="Cricket Logo">
         <h3>[254 Members] Cricket Betting Group</h3>
-        <p>Verified cricket betting tips and match predictions.</p>
-        <a class="btn" href="https://wa.me/919670814522" target="_blank">Join Now</a>
+        <p>Verified cricket betting tips and accurate match predictions from professionals.</p>
+        <a href="https://wa.me/919670814522" target="_blank" class="btn">Join Now</a>
       </div>
-    </div>
-    <div class="group">
-      <img src="https://via.placeholder.com/50?text=⚽" alt="Football Group">
-      <div>
+      <div class="group-card">
+        <img src="https://cdn-icons-png.flaticon.com/512/2942/2942789.png" alt="Football Logo">
         <h3>[189 Members] Football Betting Group</h3>
-        <p>Daily football match insights and safe betting tips.</p>
-        <a class="btn" href="https://wa.me/919670814522" target="_blank">Join Now</a>
+        <p>Daily football match insights, stats, and safe betting recommendations.</p>
+        <a href="https://wa.me/919670814522" target="_blank" class="btn">Join Now</a>
       </div>
-    </div>
-    <div class="group">
-      <img src="https://via.placeholder.com/50?text=🎰" alt="Casino Group">
-      <div>
+      <div class="group-card">
+        <img src="https://cdn-icons-png.flaticon.com/512/1073/1073137.png" alt="Casino Logo">
         <h3>[312 Members] Casino Betting Group</h3>
-        <p>Learn safe casino strategies with expert tips.</p>
-        <a class="btn" href="https://wa.me/919670814522" target="_blank">Join Now</a>
+        <p>Learn winning casino strategies from expert players and risk management tips.</p>
+        <a href="https://wa.me/919670814522" target="_blank" class="btn">Join Now</a>
       </div>
-    </div>
-    <div class="group more">
-      <img src="https://via.placeholder.com/50?text=🃏" alt="Teen Patti Group">
-      <div>
+
+      <div class="group-card hidden">
+        <img src="https://cdn-icons-png.flaticon.com/512/3075/3075977.png" alt="Teen Patti Logo">
         <h3>[276 Members] Teen Patti Pro Group</h3>
-        <p>Exclusive Teen Patti strategies & high-stakes tips.</p>
-        <a class="btn" href="https://wa.me/919670814522" target="_blank">Join Now</a>
+        <p>Exclusive Teen Patti strategies & high-stakes earning tips for serious players.</p>
+        <a href="https://wa.me/919670814522" target="_blank" class="btn">Join Now</a>
       </div>
-    </div>
-    <div class="group more">
-      <img src="https://via.placeholder.com/50?text=♠" alt="Poker Group">
-      <div>
+      <div class="group-card hidden">
+        <img src="https://cdn-icons-png.flaticon.com/512/2729/2729034.png" alt="Poker Logo">
         <h3>[198 Members] Poker Mastermind</h3>
-        <p>Learn winning poker strategies from top players.</p>
-        <a class="btn" href="https://wa.me/919670814522" target="_blank">Join Now</a>
+        <p>Learn winning poker strategies and bankroll management from top professionals.</p>
+        <a href="https://wa.me/919670814522" target="_blank" class="btn">Join Now</a>
       </div>
-    </div>
-    <div class="group more">
-      <img src="https://via.placeholder.com/50?text=🏆" alt="Fantasy League Group">
-      <div>
+      <div class="group-card hidden">
+        <img src="https://cdn-icons-png.flaticon.com/512/3209/3209237.png" alt="Fantasy League Logo">
         <h3>[223 Members] Fantasy League Experts</h3>
-        <p>Get expert picks & tips for fantasy sports leagues.</p>
-        <a class="btn" href="https://wa.me/919670814522" target="_blank">Join Now</a>
+        <p>Get expert picks & tips for fantasy sports leagues with proven winning records.</p>
+        <a href="https://wa.me/919670814522" target="_blank" class="btn">Join Now</a>
       </div>
     </div>
-  </div>
 
-  <span class="view-toggle" onclick="toggleGroups()">View All</span>
-</section>
-
-<section>
-  <h2>Frequently Asked Questions</h2>
-  <div>
-    <h4>Are these betting groups safe?</h4>
-    <p>Yes, all our groups are verified and monitored for safe betting practices.</p>
-    <h4>Do I have to pay to join?</h4>
-    <p>No, joining is free but some tips may require premium access.</p>
-    <h4>How can I trust the tips?</h4>
-    <p>We only allow trusted and experienced tipsters in our groups.</p>
-  </div>
-</section>
+    <button class="view-btn" onclick="toggleGroups()">View All</button>
+  </section>
+</div>
 
 <footer>
   <p>© 2025 BetLinkHub. All rights reserved.</p>
 </footer>
 
 <script>
-  function toggleDark(){ document.body.classList.toggle('dark'); }
-  function toggleGroups(){
-    const moreGroups=document.querySelectorAll('.group.more');
-    moreGroups.forEach(g=>g.style.display=(g.style.display==='none' || g.style.display==='')?'flex':'none');
-    document.querySelector('.view-toggle').textContent=document.querySelector('.view-toggle').textContent==='View All'?'Show Less':'View All';
-  }
-  // Hide extra groups initially
-  document.addEventListener('DOMContentLoaded', ()=>{ document.querySelectorAll('.group.more').forEach(g=>g.style.display='none'); });
-</script>
-
-<!-- FAQ Schema for SEO -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [{
-"@type": "Question",
-"name": "Are these betting groups safe?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, all our groups are verified and monitored for safe betting practices." }
-},{
-"@type": "Question",
-"name": "Do I have to pay to join?",
-"acceptedAnswer": { "@type": "Answer", "text": "No, joining is free but some tips may require premium access." }
-},{
-"@type": "Question",
-"name": "How can I trust the tips?",
-"acceptedAnswer": { "@type": "Answer", "text": "We only allow trusted and experienced tipsters in our groups." }
-}]
+function toggleGroups() {
+  const hiddenGroups = document.querySelectorAll('.group-card.hidden');
+  const btn = document.querySelector('.view-btn');
+  hiddenGroups.forEach(group => {
+    group.classList.toggle('hidden');
+  });
+  btn.textContent = btn.textContent === 'View All' ? 'Show Less' : 'View All';
 }
 </script>
+
 </body>
 </html>
