--- a/join.html
+++ b/join.html
@@ -318,7 +318,15 @@
 
   <div class="container">
   <h2>🔥 Join JokerLudo WhatsApp Groups</h2>
-
+ <!-- Joker Ludo Group 1 -->
+    <div class="group-card">
+      <img src="https://i.pinimg.com/1200x/63/ad/27/63ad27d5a49cd3cd624b414ce0bfbd9a.jpg" alt="Joker Ludo Group 1">
+      <div class="group-card-content">
+        <h3>Bethub Groups LINK (whatsapp & telegram)</h3>
+        <p>Real cash games | Instant payment | Fair play</p>
+        <a href="https://ludogrouplink.com/addwhatsappgrouplink.html#groupsc" class="join-btn" target="_blank">Join Now</a>
+        <div class="tags">
+          
     <!-- Joker Ludo Group 1 -->
     <div class="group-card">
       <img src="https://i.pinimg.com/1200x/63/ad/27/63ad27d5a49cd3cd624b414ce0bfbd9a.jpg" alt="Joker Ludo Group 1">
