--- a/join.html
+++ b/join.html
@@ -322,11 +322,17 @@
     <div class="group-card">
       <img src="https://i.pinimg.com/1200x/63/ad/27/63ad27d5a49cd3cd624b414ce0bfbd9a.jpg" alt="Joker Ludo Group 1">
       <div class="group-card-content">
-        <h3>Bethub Groups LINK (whatsapp & telegram)</h3>
+        <h3>BetLinkhub Groups LINK (whatsapp & telegram)</h3>
         <p>Real cash games | Instant payment | Fair play</p>
         <a href="https://ludogrouplink.com/addwhatsappgrouplink.html#groupsc" class="join-btn" target="_blank">Join Now</a>
         <div class="tags">
-          
+          <span>joker ludo</span><span>cash ludo group</span><span>ludo whatsapp link</span>
+          <span>earn money playing ludo</span><span>trusted ludo group</span>
+          <span>real ludo games</span><span>instant withdraw</span>
+          <span>Ludo King </span><span>play and earn</span><span>India ludo group</span>
+        </div>
+      </div>
+    </div>
     <!-- Joker Ludo Group 1 -->
     <div class="group-card">
       <img src="https://i.pinimg.com/1200x/63/ad/27/63ad27d5a49cd3cd624b414ce0bfbd9a.jpg" alt="Joker Ludo Group 1">
