--- a/index.html
+++ b/index.html
@@ -173,6 +173,87 @@
       line-height: 1.6;
       text-align: center;
     }
+      * {
+    box-sizing: border-box;
+  }
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f9f9f9;
+    color: #222;
+    line-height: 1.6;
+  }
+
+  /* Container div for all content */
+  #container {
+    max-width: 900px;
+    margin: 30px auto;
+    background: white;
+    padding: 25px 30px;
+    border-radius: 8px;
+    box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+  }
+
+  header {
+    background: #ff3e3e;
+    color: white;
+    padding: 20px 15px;
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 700;
+    border-radius: 8px 8px 0 0;
+  }
+
+  h1, h2, h3 {
+    color: #d22;
+    margin-top: 1.5rem;
+  }
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+
+  ul {
+    padding-left: 20px;
+    margin-bottom: 1rem;
+  }
+  ul li {
+    margin-bottom: 8px;
+  }
+  p {
+    margin-bottom: 1rem;
+  }
+  ol {
+    padding-left: 20px;
+    margin-bottom: 1rem;
+  }
+  ol li {
+    margin-bottom: 8px;
+  }
+
+  a {
+    color: #ff3e3e;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+
+  /* jk section containers with spacing */
+  .jk-section {
+    margin-bottom: 30px;
+  }
+
+  @media (max-width: 600px) {
+    #container {
+      padding: 20px 15px;
+      margin: 20px 10px;
+    }
     @media(max-width: 768px) {
       .features { flex-direction: column; }
     }
@@ -224,7 +305,63 @@
       <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
     </div>
   </section>
+   <div id="jk-welcome" class="jk-section">
+      <h1>Welcome to Joker Ludo – Your Ultimate Destination for Ludo WhatsApp Group Links!</h1>
+      <p>
+        Are you looking to join the best <strong>Ludo WhatsApp group link</strong> and play exciting Ludo games with real players? Joker Ludo offers verified and active <strong>WhatsApp Ludo group links</strong> where you can connect with fellow Ludo enthusiasts, participate in daily matches, and even win real rewards!
+      </p>
+      <p>
+        Whether you want to join a casual <strong>Ludo group link WhatsApp</strong> or compete in competitive <strong>Ludo King WhatsApp group links</strong>, we have got you covered.
+      </p>
+    </div>
 
+    <div id="jk-why-choose" class="jk-section">
+      <h2>Why Choose Joker Ludo?</h2>
+      <ul>
+        <li><strong>Authentic Ludo WhatsApp Group Links</strong><br>All our group links are verified and updated regularly to ensure you join active and spam-free communities.</li>
+        <li><strong>Variety of Ludo Groups</strong><br>Join <strong>Ludo Star WhatsApp group links</strong>, <strong>online Ludo groups</strong>, or special groups like <strong>Ludo betting WhatsApp group links</strong> to enjoy different playing styles.</li>
+        <li><strong>Safe and Secure</strong><br>Our platform prioritizes safety. Play responsibly in groups offering real money contests and betting.</li>
+        <li><strong>Easy to Join</strong><br>Simply click on the group links, request to join on WhatsApp, and start playing immediately!</li>
+      </ul>
+    </div>
+
+    <div id="jk-popular-groups" class="jk-section">
+      <h2>Popular Ludo WhatsApp Groups You Can Join</h2>
+      <ul>
+        <li><strong>Ludo WhatsApp Group Link</strong> – For all casual and pro players.</li>
+        <li><strong>WhatsApp Ludo Group Link</strong> – Chat, share tips, and play daily.</li>
+        <li><strong>Ludo King WhatsApp Group Link</strong> – Dedicated to fans of the famous Ludo King game.</li>
+        <li><strong>Ludo Betting WhatsApp Group Link</strong> – For those interested in safe and fun betting games.</li>
+        <li><strong>Online Ludo Group WhatsApp Link</strong> – Play anytime, anywhere with active members.</li>
+      </ul>
+    </div>
+
+    <div id="jk-how-to-join" class="jk-section">
+      <h2>How to Join Our Ludo Groups?</h2>
+      <ol>
+        <li>Browse our updated list of <strong>Ludo WhatsApp group links</strong>.</li>
+        <li>Click your favorite group link to open WhatsApp join request.</li>
+        <li>Wait for admin approval and start enjoying matches instantly.</li>
+        <li>Engage with community members and level up your game!</li>
+      </ol>
+    </div>
+
+    <div id="jk-faq" class="jk-section">
+      <h2>FAQs About Joker Ludo Groups</h2>
+      <ul>
+        <li><strong>Are these WhatsApp groups free to join?</strong><br>Yes! Most groups are completely free with no hidden charges.</li>
+        <li><strong>Is betting legal in these groups?</strong><br>Betting rules vary by location. Always play responsibly and comply with local laws.</li>
+        <li><strong>Can I find groups for specific regions?</strong><br>Yes, we provide group links like <strong>Kerala Ludo WhatsApp group link</strong>, <strong>Telugu Ludo WhatsApp group link</strong>, and more.</li>
+        <li><strong>What if a link is not working?</strong><br>We regularly update all links. If you face issues, check back later or contact us.</li>
+      </ul>
+    </div>
+
+    <div id="jk-join-today" class="jk-section">
+      <h2>Join Joker Ludo WhatsApp Groups Today and Start Playing!</h2>
+      <p>
+        Don’t miss out on the fun and excitement! Explore our trusted <strong>Ludo WhatsApp group links</strong> and be part of a growing community of Ludo lovers.
+      </p>
+    </div>
   <section class="seo-text">
     <p>Explore top-rated <strong>Ludo WhatsApp group links</strong> with JokerLudo. We provide the most reliable and high-paying <strong>WhatsApp Ludo groups</strong> for players across India. Get daily match updates, secure transactions, and instant payouts. Whether you're searching for <strong>Ludo King WhatsApp groups</strong>, <strong>FastWin Ludo groups</strong>, or <strong>verified earning Ludo groups</strong>, JokerLudo has you covered.</p>
   </section>
