--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>JokerLudo - Best Ludo WhatsApp Group Links | Earn Money Playing Ludo</title>
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. JokerLudo is your #1 Ludo King group link hub." />
-  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
+  <meta name="description" content="Discover verified Ludo WhatsApp group links on Joker Ludo. Join Ludo King, Ludo Star & betting groups to play, compete, and win exciting prizes. Join now! Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. JokerLudo is your #1 Ludo King group link hub." />
+  <meta name="keywords" content="Ludo WhatsApp group link, WhatsApp Ludo group link, Ludo King WhatsApp group link, Ludo betting WhatsApp group, online Ludo group, Ludo Star WhatsApp group link, Kerala Ludo WhatsApp group link, Telugu Ludo WhatsApp group link, ludo whatsapp group link, jokerludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
   <meta name="author" content="JokerLudo Group" />
   <meta name="robots" content="index, follow" />
   
