--- a/rules.html
+++ b/rules.html
@@ -129,6 +129,57 @@
     .footer-links a:hover {
       color: #ffde59;
     }
+    body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 0; padding: 0; background: #fff;
+    color: #222;
+  }
+  #container {
+    max-width: 900px;
+    margin: 20px auto;
+    padding: 15px 25px;
+    box-shadow: 0 0 10px rgb(0 0 0 / 0.1);
+  }
+  header, footer {
+    text-align: center;
+    padding: 10px;
+    background: #ff3e3e;
+    color: white;
+    border-radius: 6px;
+  }
+  h1, h2, h3 {
+    color: #cc1a1a;
+    margin-top: 30px;
+  }
+  p {
+    margin-bottom: 15px;
+  }
+  ul, ol {
+    margin: 15px 0 25px 20px;
+  }
+  a.join-btn {
+    display: inline-block;
+    background: #ff3e3e;
+    color: white;
+    padding: 12px 25px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    margin-top: 15px;
+  }
+  a.join-btn:hover {
+    background: #cc1a1a;
+  }
+  .jk-section {
+    margin-bottom: 35px;
+  }
+  @media (max-width:600px){
+    #container {
+      padding: 15px 10px;
+      margin: 10px;
+    }
+  }
   </style>
 </head>
 <body>
@@ -158,6 +209,95 @@
       <li><span class="important">🎮 Play fair, play smart.</span> Let everyone enjoy the game!</li>
     </ul>
   </div>
+  <section id="jk-rules" class="jk-section">
+      <h2>Rules of Ludo WhatsApp Group</h2>
+      <p>First of all read the rules of Ludo WhatsApp Group. After reading the rules, start playing in Ludo WhatsApp Group so that later you and Ludo Group Admin do not face any problem.</p>
+      <ul>
+        <li><strong>Talk to players respectfully in WhatsApp Ludo Group:</strong> Maintain respect and courtesy with Ludo group members. Do not quarrel while playing.</li>
+        <li><strong>Play Ludo honestly:</strong> Avoid cheating, using multiple accounts, or manipulating the game.</li>
+        <li><strong>Wait for your turn:</strong> Do not message or call any player for the code until admin assigns a table. Be patient.</li>
+        <li><strong>Use chat wisely:</strong> No obscene photos or messages. Such behavior leads to immediate removal.</li>
+        <li><strong>Internet connection problems:</strong> Check your internet before starting. If it goes down mid-game, you may lose.</li>
+        <li><strong>Time management:</strong> Play within time limits so others aren’t kept waiting.</li>
+        <li><strong>Discussion after game:</strong> Discuss mistakes and improve your gameplay with others.</li>
+        <li><strong>Privacy:</strong> Do not share personal information.</li>
+      </ul>
+      <p>These tips help ensure enjoyable and respectful gameplay in WhatsApp Ludo groups.</p>
+    </section>
+
+    <section id="jk-toc" class="jk-section">
+      <h2>Table of Contents</h2>
+      <ul>
+        <li>What things should be kept in mind while playing Ludo in Ludo WhatsApp group?</li>
+        <li>What is Ludo WhatsApp Group?</li>
+        <li>Benefits of Ludo Group</li>
+        <li>Join Ludo WhatsApp Group</li>
+        <li>Topics Covered Related to Ludo Group links</li>
+        <li>हिंदी लूडो व्हाट्सप्प ग्रुप लिंक</li>
+        <li>व्हाट्सएप लूडो ग्रुप में लूडो खेलते समय किन बातों का ध्यान रखना चाहिए?</li>
+        <li>लूडो व्हाट्सएप ग्रुप से जुड़ने के लिए निचे दिये गये बटन पर क्लिक करे</li>
+      </ul>
+    </section>
+
+    <section id="jk-what-is" class="jk-section">
+      <h2>What is Ludo WhatsApp Group?</h2>
+      <p>“Ludo Group” is a group created on WhatsApp where people play Ludo together virtually. Members follow game rules, take turns, roll dice, and share moves in the group chat.</p>
+      <p>It’s an online gaming community where friends and players compete and enjoy Ludo.</p>
+    </section>
+
+    <section id="jk-benefits" class="jk-section">
+      <h2>Benefits of Ludo Group</h2>
+      <ul>
+        <li><strong>Social Interaction:</strong> Connect and chat with friends and family.</li>
+        <li><strong>Entertainment:</strong> Enjoy Ludo anytime, anywhere.</li>
+        <li><strong>Competition:</strong> Healthy challenge and strategy development.</li>
+        <li><strong>Time Pass:</strong> Relax and reduce stress playing Ludo.</li>
+        <li><strong>Bonding:</strong> Strengthen relationships through shared interest.</li>
+        <li><strong>Learning Opportunity:</strong> Develop strategic thinking and decision making.</li>
+        <li><strong>Virtual Interaction:</strong> Connect despite distance.</li>
+        <li><strong>No Physical Setup:</strong> No board or pieces needed.</li>
+        <li><strong>Group Fun:</strong> Play and enjoy with multiple players.</li>
+      </ul>
+    </section>
+
+    <section id="jk-join" class="jk-section">
+      <h2>Join Ludo WhatsApp Group</h2>
+      <p>Click the buttons below to join various trusted Ludo WhatsApp groups:</p>
+      <ul>
+        <li><a href="#" class="join-btn" aria-label="Join Ludo Group">Ludo Group -> JOIN GROUP</a></li>
+        <li><a href="#" class="join-btn" aria-label="Join WhatsApp Ludo Group">WhatsApp Ludo Group -> JOIN GROUP</a></li>
+        <li><a href="#" class="join-btn" aria-label="Join Ludo King WhatsApp Group Link">Ludo King WhatsApp Group Link -> JOIN GROUP</a></li>
+        <!-- Add more join buttons as needed -->
+      </ul>
+    </section>
+
+    <section id="jk-topics" class="jk-section">
+      <h2>Topics Covered Related to Ludo Group Links</h2>
+      <p>
+        Ludo Group, Ludo Group Link, WhatsApp Ludo Group Link, Ludo King WhatsApp Group Link, MK Ludo Group, Ludo Betting WhatsApp Group Link, Trusted Ludo Group Link, Money King Ludo Group, Online Ludo Group Link, Hindi लूडो व्हाट्सप्प ग्रुप लिंक and more.
+      </p>
+    </section>
+
+    <section id="jk-hindi-section" class="jk-section">
+      <h2>हिंदी लूडो व्हाट्सप्प ग्रुप लिंक</h2>
+      <p>नमस्कार दोस्तों, यदि आप एक विश्वसनीय लूडो ग्रुप की तलाश में हैं तो आप सही जगह पर हैं। यहां आपको एक विश्वसनीय व्हाट्सएप लूडो ग्रुप का लिंक मिलेगा जिससे आप जुड़ सकते हैं और ग्रुप के भीतर लूडो खेल सकते हैं। यह लूडो व्हाट्सएप ग्रुप 100% विश्वसनीय है। इसमें आपके साथ किसी भी तरह की धोखाधड़ी नहीं होगी, बस आपको व्हाट्सएप लूडो ग्रुप में गेम खेलते समय कुछ बातों का ध्यान रखना होगा।</p>
+
+      <h3>व्हाट्सएप लूडो ग्रुप में लूडो खेलते समय किन बातों का ध्यान रखना चाहिए?</h3>
+      <ul>
+        <li>व्हाट्सएप लूडो ग्रुप गोपनीयता का पालन करें: लूडो ग्रुप में लूडो खेलते समय व्यक्तिगत जानकारी साझा न करें।</li>
+        <li>व्हाट्सएप लूडो ग्रुप के नियम पढ़ें और पालन करें।</li>
+        <li>सदस्यों से सम्मानपूर्वक बात करें और झगड़ा न करें।</li>
+        <li>ईमानदारी से खेलें और धोखाधड़ी से बचें।</li>
+        <li>इंटरनेट कनेक्शन ठीक करें और धीमे कनेक्शन पर गेम शुरू न करें।</li>
+        <li>चैट का सही उपयोग करें, अश्लील सामग्री न भेजें।</li>
+        <li>समय सीमा का पालन करें और दूसरों का इंतजार न कराएं।</li>
+        <li>गेम के बाद चर्चा करें और अपनी गलतियां सुधारें।</li>
+      </ul>
+
+      <p>यह नियम आपको मजेदार और सुरक्षित गेमिंग अनुभव देंगे।</p>
+
+      <a href="#" class="join-btn" aria-label="Join Hindi Ludo WhatsApp Group">लूडो व्हाट्सएप ग्रुप में शामिल हों</a>
+    </section>
 
   <footer>
     <div class="footer-links">
