--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
     </div>
   </section>
-   <div id="jk-welcome" class="jk-section">
+    <section class="hero">
       <h1>Welcome to Joker Ludo – Your Ultimate Destination for Ludo WhatsApp Group Links!</h1>
       <p>
         Are you looking to join the best <strong>Ludo WhatsApp group link</strong> and play exciting Ludo games with real players? Joker Ludo offers verified and active <strong>WhatsApp Ludo group links</strong> where you can connect with fellow Ludo enthusiasts, participate in daily matches, and even win real rewards!
@@ -311,7 +311,7 @@
       <p>
         Whether you want to join a casual <strong>Ludo group link WhatsApp</strong> or compete in competitive <strong>Ludo King WhatsApp group links</strong>, we have got you covered.
       </p>
-    </div>
+    </section>
 
     <div id="jk-why-choose" class="jk-section">
       <h2>Why Choose Joker Ludo?</h2>
