--- a/index.html
+++ b/index.html
@@ -255,6 +255,31 @@
     @media(max-width: 768px) {
       .features { flex-direction: column; }
     }
+
+  .nero {
+    text-align: center;
+    padding: 50px 20px;
+    background: linear-gradient(to right, #ffe57f, #ffc107);
+  }
+  .nero h1 {
+    display: inline-block;
+    font-size: 32px;
+    margin-bottom: 15px;
+    background: #ff7043; /* simple attractive color */
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+  }
+  .nero ol {
+    font-size: 18px;
+    margin: 0 auto;
+    max-width: 700px;
+    text-align: left;
+    line-height: 1.5;
+    padding-left: 40px;
+  }
+    
   </style>
 </head>
 <body>
@@ -303,7 +328,7 @@
       <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
     </div>
   </section>
-    <section class="hero">
+    <section class="nero">
       <h1>Welcome to Joker Ludo – Your Ultimate Destination for Ludo WhatsApp Group Links!</h1>
       <p>
         Are you looking to join the best <strong>Ludo WhatsApp group link</strong> and play exciting Ludo games with real players? Joker Ludo offers verified and active <strong>WhatsApp Ludo group links</strong> where you can connect with fellow Ludo enthusiasts, participate in daily matches, and even win real rewards!
