--- a/index.html
+++ b/index.html
@@ -330,23 +330,24 @@
   </section>
     <section class="nero">
       <h1>Welcome to Joker Ludo – Your Ultimate Destination for Ludo WhatsApp Group Links!</h1>
-      <p>
-        Are you looking to join the best <strong>Ludo WhatsApp group link</strong> and play exciting Ludo games with real players? Joker Ludo offers verified and active <strong>WhatsApp Ludo group links</strong> where you can connect with fellow Ludo enthusiasts, participate in daily matches, and even win real rewards!
-      </p>
-      <p>
+      <ol>
+       <li> Are you looking to join the best <strong>Ludo WhatsApp group link</strong> and play exciting Ludo games with real players? Joker Ludo offers verified and active <strong>WhatsApp Ludo group links</strong> where you can connect with fellow Ludo enthusiasts, participate in daily matches, and even win real rewards!
+     </li>
+    <li>
         Whether you want to join a casual <strong>Ludo group link WhatsApp</strong> or compete in competitive <strong>Ludo King WhatsApp group links</strong>, we have got you covered.
-      </p>
+      </li>
+      </ol>
     </section>
 
-    <div id="jk-why-choose" class="jk-section">
+    <section class="nero">
       <h2>Why Choose Joker Ludo?</h2>
-      <ul>
+      <ol>
         <li><strong>Authentic Ludo WhatsApp Group Links</strong><br>All our group links are verified and updated regularly to ensure you join active and spam-free communities.</li>
         <li><strong>Variety of Ludo Groups</strong><br>Join <strong>Ludo Star WhatsApp group links</strong>, <strong>online Ludo groups</strong>, or special groups like <strong>Ludo betting WhatsApp group links</strong> to enjoy different playing styles.</li>
         <li><strong>Safe and Secure</strong><br>Our platform prioritizes safety. Play responsibly in groups offering real money contests and betting.</li>
         <li><strong>Easy to Join</strong><br>Simply click on the group links, request to join on WhatsApp, and start playing immediately!</li>
-      </ul>
-    </div>
+      </ol>
+    </section>
 
     <div id="jk-popular-groups" class="jk-section">
       <h2>Popular Ludo WhatsApp Groups You Can Join</h2>
