--- a/index.html
+++ b/index.html
@@ -256,27 +256,27 @@
       .features { flex-direction: column; }
     }
 
-  .nero {
+    .nero {
     text-align: center;
     padding: 50px 20px;
-    background: linear-gradient(to right, #ffe57f, #ffc107);
+    background: #f9f9f9; /* light neutral background */
   }
   .nero h1 {
     display: inline-block;
     font-size: 32px;
-    margin-bottom: 15px;
-    background: #ff7043; /* simple attractive color */
+    margin-bottom: 20px;
+    background-color: #ff7043; /* background color for heading only */
     color: #fff;
-    padding: 10px 20px;
+    padding: 12px 25px;
     border-radius: 8px;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+    box-shadow: 2px 2px 8px rgba(0,0,0,0.3);
   }
   .nero ol {
     font-size: 18px;
     margin: 0 auto;
     max-width: 700px;
     text-align: left;
-    line-height: 1.5;
+    line-height: 1.6;
     padding-left: 40px;
   }
     
