--- a/index.html
+++ b/index.html
@@ -329,7 +329,10 @@
     </div>
   </section>
     <section class="nero">
-      <h1 style="background: #ff5722;>Welcome to Joker Ludo – Your Ultimate Destination for Ludo WhatsApp Group Links!</h1>
+    <h1 style="background: #ff5722; color: #fff; padding: 10px 20px; border-radius: 6px;">
+  Welcome to Joker Ludo – Your Ultimate Destination for Ludo WhatsApp Group Links!
+</h1>
+
       <ol>
        <li> Are you looking to join the best <strong>Ludo WhatsApp group link</strong> and play exciting Ludo games with real players? Joker Ludo offers verified and active <strong>WhatsApp Ludo group links</strong> where you can connect with fellow Ludo enthusiasts, participate in daily matches, and even win real rewards!
      </li>
