--- a/index.html
+++ b/index.html
@@ -255,7 +255,12 @@
     @media(max-width: 768px) {
       .features { flex-direction: column; }
     }
-
+@media (max-width: 480px) {
+  h1 {
+    font-size: 18px !important;
+    line-height: 1.2 !important;
+  }
+}
     .nero {
     text-align: center;
     padding: 50px 20px;
@@ -329,7 +334,17 @@
     </div>
   </section>
     <section class="nero">
-    <h1 style="background: #ff5722; color: #fff; padding: 10px 20px; border-radius: 6px;">
+  <h1 style="
+  background: #ff5722; 
+  color: #fff; 
+  padding: 10px 20px; 
+  border-radius: 6px; 
+  font-size: 24px; 
+  line-height: 1.3; 
+  text-align: center;
+  display: inline-block;
+  max-width: 90%;
+">
   Welcome to Joker Ludo – Your Ultimate Destination for Ludo WhatsApp Group Links!
 </h1>
 
