--- a/index.html
+++ b/index.html
@@ -344,6 +344,8 @@
   text-align: center;
   display: inline-block;
   max-width: 90%;
+      margin-top: 10px;       /* Default margin ko control karo */
+  margin-bottom: 15px;
 ">
   Welcome to Joker Ludo – Your Ultimate Destination for Ludo WhatsApp Group Links!
 </h1>
