--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@
       </ol>
     </section>
 
-    <section class="nero">
+  </section>
+  <section class="nero">
       <h2>Why Choose Joker Ludo?</h2>
       <ol>
         <li><strong>Authentic Ludo WhatsApp Group Links</strong><br>All our group links are verified and updated regularly to ensure you join active and spam-free communities.</li>
@@ -367,8 +368,8 @@
         <li><strong>Safe and Secure</strong><br>Our platform prioritizes safety. Play responsibly in groups offering real money contests and betting.</li>
         <li><strong>Easy to Join</strong><br>Simply click on the group links, request to join on WhatsApp, and start playing immediately!</li>
       </ol>
-
-      
+</section>
+      <section class="nero">
       <h2>Popular Ludo WhatsApp Groups You Can Join</h2>
       <ul>
         <li><strong>Ludo WhatsApp Group Link</strong> – For all casual and pro players.</li>
@@ -378,8 +379,8 @@
         <li><strong>Online Ludo Group WhatsApp Link</strong> – Play anytime, anywhere with active members.</li>
       </ul>
    
-
-
+</section>
+<section class="nero">
       <h2>How to Join Our Ludo Groups?</h2>
       <ol>
         <li>Browse our updated list of <strong>Ludo WhatsApp group links</strong>.</li>
@@ -389,7 +390,8 @@
       </ol>
    
 
-
+</section>
+  <section class="nero">
       <h2>FAQs About Joker Ludo Groups</h2>
       <ul>
         <li><strong>Are these WhatsApp groups free to join?</strong><br>Yes! Most groups are completely free with no hidden charges.</li>
@@ -398,7 +400,8 @@
         <li><strong>What if a link is not working?</strong><br>We regularly update all links. If you face issues, check back later or contact us.</li>
       </ul>
   
-
+</section>
+  
       <h2>Join Joker Ludo WhatsApp Groups Today and Start Playing!</h2>
       <p>
         Don’t miss out on the fun and excitement! Explore our trusted <strong>Ludo WhatsApp group links</strong> and be part of a growing community of Ludo lovers.
