--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
   text-align: center;
   display: inline-block;
   max-width: 90%;
-      margin-top: 05px;       /* Default margin ko control karo */
+      margin-top: 20px;       /* Default margin ko control karo */
   margin-bottom: 10px;
 ">
   Welcome to Joker Ludo – Your Ultimate Destination for Ludo WhatsApp Group Links!
@@ -361,7 +361,19 @@
 
   </section>
   <section class="nero">
-      <h2>Why Choose Joker Ludo?</h2>
+      <h2  style="
+  background: #ff5722; 
+  color: #fff; 
+  padding: 10px 20px; 
+  border-radius: 6px; 
+  font-size: 24px; 
+  line-height: 1.3; 
+  text-align: center;
+  display: inline-block;
+  max-width: 90%;
+      margin-top: 20px;       /* Default margin ko control karo */
+  margin-bottom: 10px;
+">Why Choose Joker Ludo?</h2>
       <ol>
         <li><strong>Authentic Ludo WhatsApp Group Links</strong><br>All our group links are verified and updated regularly to ensure you join active and spam-free communities.</li>
         <li><strong>Variety of Ludo Groups</strong><br>Join <strong>Ludo Star WhatsApp group links</strong>, <strong>online Ludo groups</strong>, or special groups like <strong>Ludo betting WhatsApp group links</strong> to enjoy different playing styles.</li>
@@ -370,7 +382,19 @@
       </ol>
 </section>
       <section class="nero">
-      <h2>Popular Ludo WhatsApp Groups You Can Join</h2>
+      <h2  style="
+  background: #ff5722; 
+  color: #fff; 
+  padding: 10px 20px; 
+  border-radius: 6px; 
+  font-size: 24px; 
+  line-height: 1.3; 
+  text-align: center;
+  display: inline-block;
+  max-width: 90%;
+      margin-top: 20px;       /* Default margin ko control karo */
+  margin-bottom: 10px;
+">Popular Ludo WhatsApp Groups You Can Join</h2>
       <ul>
         <li><strong>Ludo WhatsApp Group Link</strong> – For all casual and pro players.</li>
         <li><strong>WhatsApp Ludo Group Link</strong> – Chat, share tips, and play daily.</li>
@@ -381,7 +405,19 @@
    
 </section>
 <section class="nero">
-      <h2>How to Join Our Ludo Groups?</h2>
+      <h2  style="
+  background: #ff5722; 
+  color: #fff; 
+  padding: 10px 20px; 
+  border-radius: 6px; 
+  font-size: 24px; 
+  line-height: 1.3; 
+  text-align: center;
+  display: inline-block;
+  max-width: 90%;
+      margin-top: 20px;       /* Default margin ko control karo */
+  margin-bottom: 10px;
+">How to Join Our Ludo Groups?</h2>
       <ol>
         <li>Browse our updated list of <strong>Ludo WhatsApp group links</strong>.</li>
         <li>Click your favorite group link to open WhatsApp join request.</li>
@@ -392,7 +428,19 @@
 
 </section>
   <section class="nero">
-      <h2>FAQs About Joker Ludo Groups</h2>
+      <h2  style="
+  background: #ff5722; 
+  color: #fff; 
+  padding: 10px 20px; 
+  border-radius: 6px; 
+  font-size: 24px; 
+  line-height: 1.3; 
+  text-align: center;
+  display: inline-block;
+  max-width: 90%;
+      margin-top: 20px;       /* Default margin ko control karo */
+  margin-bottom: 10px;
+">FAQs About Joker Ludo Groups</h2>
       <ul>
         <li><strong>Are these WhatsApp groups free to join?</strong><br>Yes! Most groups are completely free with no hidden charges.</li>
         <li><strong>Is betting legal in these groups?</strong><br>Betting rules vary by location. Always play responsibly and comply with local laws.</li>
@@ -401,8 +449,20 @@
       </ul>
   
 </section>
-  
-      <h2>Join Joker Ludo WhatsApp Groups Today and Start Playing!</h2>
+    <section class="nero">
+      <h2 style="
+  background: #ff5722; 
+  color: #fff; 
+  padding: 10px 20px; 
+  border-radius: 6px; 
+  font-size: 24px; 
+  line-height: 1.3; 
+  text-align: center;
+  display: inline-block;
+  max-width: 90%;
+      margin-top: 20px;       /* Default margin ko control karo */
+  margin-bottom: 10px;
+">Join Joker Ludo WhatsApp Groups Today and Start Playing!</h2>
       <p>
         Don’t miss out on the fun and excitement! Explore our trusted <strong>Ludo WhatsApp group links</strong> and be part of a growing community of Ludo lovers.
       </p>
