--- a/index.html
+++ b/index.html
@@ -471,7 +471,12 @@
     <p>Explore top-rated <strong>Ludo WhatsApp group links</strong> with JokerLudo. We provide the most reliable and high-paying <strong>WhatsApp Ludo groups</strong> for players across India. Get daily match updates, secure transactions, and instant payouts. Whether you're searching for <strong>Ludo King WhatsApp groups</strong>, <strong>FastWin Ludo groups</strong>, or <strong>verified earning Ludo groups</strong>, JokerLudo has you covered.</p>
   </section>
 
-  <section class="features">
+  <section class="features" style="
+  width: 80%; 
+  max-width: 1000px;
+  margin: 0 auto; 
+  text-align: center;
+">
     <div class="card">
       <h3>✅ 24x7 Support</h3>
       <p>Always online to help with fast responses.</p>
