--- a/index.html
+++ b/index.html
@@ -283,7 +283,10 @@
     text-align: left;
     line-height: 1.6;
     padding-left: 40px;
+     display: none; /* Hide by default */
+    margin-top: 10px
   }
+  
     
   </style>
 </head>
@@ -428,19 +431,20 @@
 
 </section>
   <section class="nero">
-      <h2  style="
-  background: #ff5722; 
-  color: #fff; 
-  padding: 10px 20px; 
-  border-radius: 6px; 
-  font-size: 24px; 
-  line-height: 1.3; 
-  text-align: center;
-  display: inline-block;
-  max-width: 90%;
-      margin-top: 2px;       /* Default margin ko control karo */
-  margin-bottom: 10px;
-">FAQs About Joker Ludo Groups</h2>
+<h2 style="
+    background: #ff5722; 
+    color: #fff; 
+    padding: 10px 20px; 
+    border-radius: 6px; 
+    font-size: 24px; 
+    line-height: 1.3; 
+    text-align: center;
+    display: inline-block;
+    max-width: 90%;
+    margin-top: 2px;
+    margin-bottom: 10px;
+    cursor: pointer;
+  ">FAQs About Joker Ludo Groups</h2>
       <ul>
         <li><strong>Are these WhatsApp groups free to join?</strong><br>Yes! Most groups are completely free with no hidden charges.</li>
         <li><strong>Is betting legal in these groups?</strong><br>Betting rules vary by location. Always play responsibly and comply with local laws.</li>
@@ -449,28 +453,30 @@
       </ul>
   
 </section>
-    <section class="nero">
-      <h2 style="
-  background: #ff5722; 
-  color: #fff; 
-  padding: 10px 20px; 
-  border-radius: 6px; 
-  font-size: 24px; 
-  line-height: 1.3; 
-  text-align: center;
-  display: inline-block;
-  max-width: 90%;
-      margin-top: 2px;       /* Default margin ko control karo */
-  margin-bottom: 10px;
-">Join Joker Ludo WhatsApp Groups Today and Start Playing!</h2>
-      <p>
+   <section class="nero">
+    <h2 style="
+    background: #ff5722; 
+    color: #fff; 
+    padding: 10px 20px; 
+    border-radius: 6px; 
+    font-size: 24px; 
+    line-height: 1.3; 
+    text-align: center;
+    display: inline-block;
+    max-width: 90%;
+    margin-top: 2px;
+    margin-bottom: 10px;
+    cursor: pointer;
+  "> Join Joker Ludo WhatsApp Groups Today and Start Playing!</h2>
+      <ol id="toggle-content" style="display: none;">
+      <li>
         Don’t miss out on the fun and excitement! Explore our trusted <strong>Ludo WhatsApp group links</strong> and be part of a growing community of Ludo lovers.
-      </p>
+      </li>
    </section>
   <section class="seo-text">
-    <p>Explore top-rated <strong>Ludo WhatsApp group links</strong> with JokerLudo. We provide the most reliable and high-paying <strong>WhatsApp Ludo groups</strong> for players across India. Get daily match updates, secure transactions, and instant payouts. Whether you're searching for <strong>Ludo King WhatsApp groups</strong>, <strong>FastWin Ludo groups</strong>, or <strong>verified earning Ludo groups</strong>, JokerLudo has you covered.</p>
+    <li>Explore top-rated <strong>Ludo WhatsApp group links</strong> with JokerLudo. We provide the most reliable and high-paying <strong>WhatsApp Ludo groups</strong> for players across India. Get daily match updates, secure transactions, and instant payouts. Whether you're searching for <strong>Ludo King WhatsApp groups</strong>, <strong>FastWin Ludo groups</strong>, or <strong>verified earning Ludo groups</strong>, JokerLudo has you covered.</li>
   </section>
-
+     </ol>
   <section class="features" style="
   width: 80%; 
   max-width: 1000px;
@@ -499,36 +505,61 @@
     </div>
   </section>
 
-  <script>
-    const totalFrames = 5;
-    const framePaths = Array.from({ length: totalFrames }, (_, i) => `frames/frame${i + 1}.txt`);
-    const frameDelay = 200;
-    const animationElement = document.getElementById("ascii-animation");
-    let frames = [];
-    let currentFrame = 0;
+<style>
+  /* Hide content under headings by default */
+  .nero h2 + * {
+    display: none;
+  }
+</style>
 
-    async function loadFrames() {
-      for (const path of framePaths) {
-        try {
-          const response = await fetch(path);
-          const text = await response.text();
-          frames.push(text);
-        } catch (err) {
-          frames.push("Error loading frame.");
-        }
+<script>
+  // ASCII animation (your original code, unchanged)
+  const totalFrames = 5;
+  const framePaths = Array.from({ length: totalFrames }, (_, i) => `frames/frame${i + 1}.txt`);
+  const frameDelay = 200;
+  const animationElement = document.getElementById("ascii-animation");
+  let frames = [];
+  let currentFrame = 0;
+
+  async function loadFrames() {
+    for (const path of framePaths) {
+      try {
+        const response = await fetch(path);
+        const text = await response.text();
+        frames.push(text);
+      } catch (err) {
+        frames.push("Error loading frame.");
       }
-      startAnimation();
     }
+    startAnimation();
+  }
 
-    function startAnimation() {
-      setInterval(() => {
-        animationElement.textContent = frames[currentFrame];
-        currentFrame = (currentFrame + 1) % frames.length;
-      }, frameDelay);
-    }
+  function startAnimation() {
+    setInterval(() => {
+      animationElement.textContent = frames[currentFrame];
+      currentFrame = (currentFrame + 1) % frames.length;
+    }, frameDelay);
+  }
 
-    loadFrames();
-  </script>
+  loadFrames();
+
+  // Collapsible headings
+  document.querySelectorAll('.nero h2').forEach(function(heading) {
+    heading.addEventListener('click', function() {
+      // Grab the next sibling element only if it exists and is an element node
+      let content = this.nextElementSibling;
+      if (!content) return;
+
+      // Toggle display
+      if (content.style.display === 'block') {
+        content.style.display = 'none';
+      } else {
+        content.style.display = 'block';
+      }
+    });
+  });
+</script>
+
 
   <footer>
     <div class="footer-links">
